# SEHH2042-Group-Project

./: .gitignore  CMakeLists.txt  JetAssign.cpp  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  JetAssign.cpp
test/: CMakeLists.txt  JetAssign_UnitTest.cpp
